ElasticSearch integration. removed transport client with rest client. Integrated free and generic search. MapStruct integrated.